--- a/backEnd/jobPortal/src/main/resources/application.properties
+++ b/backEnd/jobPortal/src/main/resources/application.properties
@@ -64,3 +64,6 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 # Optional
 spring.mail.properties.mail.from.name=JobPortal Team
 
+# dùng biến PORT nếu platform cấp (Railway/Render thường set PORT)
+server.port=${PORT:8080}
+
