--- a/backEnd/jobPortal/src/main/resources/application.properties
+++ b/backEnd/jobPortal/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=jobPortal
 # Database connection configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/job_portal
-spring.datasource.username=root
-spring.datasource.password=12345
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA configuration
