--- a/backEnd/jobPortal/src/main/resources/application.properties
+++ b/backEnd/jobPortal/src/main/resources/application.properties
@@ -66,4 +66,6 @@ spring.mail.properties.mail.from.name=JobPortal Team
 
 # dùng biến PORT nếu platform cấp (Railway/Render thường set PORT)
 server.port=${PORT:8080}
+server.address=0.0.0.0
+
 
