--- a/backEnd/jobPortal/Dockerfile
+++ b/backEnd/jobPortal/Dockerfile
@@ -1,22 +1,15 @@
-# ===== BUILD =====
 FROM eclipse-temurin:23-jdk AS build
 WORKDIR /app
 
-# Copy backend source
-COPY backEnd/jobPortal/ .
+# copy relative to build context (which is backEnd/jobPortal)
+COPY . .
 
-# cấp quyền cho gradlew
-RUN chmod +x gradlew
+RUN chmod +x ./gradlew
+RUN ./gradlew clean bootJar -x test --no-daemon
+RUN ls -la build/libs || true
 
-# build JAR
-RUN ./gradlew clean bootJar --no-daemon
-
-# ===== RUN =====
 FROM eclipse-temurin:23-jre
 WORKDIR /app
-
-# copy file jar sang image
 COPY --from=build /app/build/libs/*.jar app.jar
-
 EXPOSE 8080
-ENTRYPOINT ["java", "-jar", "app.jar"]
+ENTRYPOINT ["sh","-c","java -jar app.jar --server.port=${PORT:-8080}"]
