--- a/backEnd/jobPortal/src/main/resources/application.properties
+++ b/backEnd/jobPortal/src/main/resources/application.properties
@@ -68,4 +68,16 @@ spring.mail.properties.mail.from.name=JobPortal Team
 server.port=${PORT:8080}
 server.address=0.0.0.0
 
+# giảm mức log chung
+logging.level.root=WARN
+
+# giảm mức log cho Spring (nhiều log)
+logging.level.org.springframework=WARN
+logging.level.org.hibernate=WARN
+# tắt câu SQL in ra
+spring.jpa.show-sql=false
+# nếu bạn in SQL bằng hibernate.format_sql, tắt luôn
+spring.jpa.properties.hibernate.format_sql=false
+
+
 
