--- a/backEnd/jobPortal/src/main/resources/application.properties
+++ b/backEnd/jobPortal/src/main/resources/application.properties
@@ -78,6 +78,7 @@ logging.level.org.hibernate=WARN
 spring.jpa.show-sql=false
 # nếu bạn in SQL bằng hibernate.format_sql, tắt luôn
 spring.jpa.properties.hibernate.format_sql=false
+spring.mail.properties.mail.smtp.ssl.trust=smtp.sendgrid.net
 
 
 
